--- a/style.css
+++ b/style.css
@@ -228,7 +228,8 @@ footer {
     }
 
     .box-left button:hover {
-        margin-top: -1em;
+        margin: 0;
+        padding: 0;
         border: 2px solid rgb(0, 0, 230);
     }
 
