--- a/style.css
+++ b/style.css
@@ -115,9 +115,10 @@ nav ul li {
 }
 
 .box-left button {
-    width: 180px;
-    margin-top: -.2em;
-    padding: .5em;
+    width: 160px;
+    height: 44px;
+    margin-top: -.4em;
+    padding: 0 .5em;
     border-radius: 20px;
     font-size: 20px;
     color: rgb(228, 227, 227);
@@ -127,7 +128,7 @@ nav ul li {
 
 .box-left button:hover {
     cursor: pointer;
-    margin-top: -.3em;
+    margin-top: -.4em;
     background-color: rgb(0, 0, 230);
     border: 3px solid rgb(0, 0, 230);
     color: #ffffff;
@@ -148,7 +149,7 @@ nav ul li {
     outline: none; /* fjerner firkant rundt input når den er i focus */
     color: black;
     font-size: 15px;
-    text-indent: 30px;
+    text-indent: 25px;
     letter-spacing: .1px;
     background-color: rgb(253, 231, 231);
 }
@@ -180,8 +181,7 @@ footer {
     justify-content: space-between;
 }
 
-
-@media only screen and ( max-width: 1024px){
+@media ( max-width: 1024px){
 
     body {
         font-size: 17px;
@@ -227,13 +227,12 @@ footer {
         height: 37px;
         font-size: 16px;
         font-weight: 500;
-        margin: -.3em .2em;
+        margin: -.8em .2em;
         padding: 0 1em;
     }
 
     .box-left button:hover {
-        border: 2px solid rgb(0, 0, 230);
-        margin: -.6em .3em;
+        margin: -.8em .2em;
         color: #ffffff;
     }
 
@@ -241,12 +240,12 @@ footer {
         width: 120px;
         height: 32px;
         margin-bottom: .5em;
+        text-indent: 20px;
         
     }
 }
 
-
-@media only screen and (max-width:640px){
+@media (max-width:640px){
 
     body {
         font-size: 14px;
@@ -275,35 +274,35 @@ footer {
     }
 
     .box-left {
-        margin-top: 1em;
+        margin-top: 1.1em;
         height: 12em;
         width: 10em;
     }
     
     .box-left label {
-        margin-bottom: 1.2em;
+        margin-bottom: 1.5em;
     }
 
     .box-left button {
-        width: 90px;
+        width: 100px;
         height: 26px;
         font-size: 12px;
-        margin-top: -.25em;
+        margin-top: -.35em;
         padding: 0;
         
     }
 
     .box-left button:hover {
-        margin-top: -.25em;
+        margin-top: -.35em;
         padding: 0;
-        border: 2px solid rgb(0, 0, 230);
         color: #ffffff;
     }
 
     .box-right input {
-        width: 80px;
+        width: 90px;
         height: 23px;
         margin: 0.4em 0.5em;
+        text-indent: 10px;
     }
 }
 
