--- a/style.css
+++ b/style.css
@@ -117,20 +117,22 @@ nav ul li {
 .box-left button {
     width: 160px;
     height: 44px;
-    margin-top: -.4em;
+    margin-top: -.3em;
     padding: 0 .5em;
     border-radius: 20px;
     font-size: 20px;
     color: rgb(228, 227, 227);
     background-color: rgb(47, 47, 243);
     border: 1px solid rgb(47, 47, 243);
+    transition: all .1s ease-in-out;
+    outline: none;
 }
 
 .box-left button:hover {
     cursor: pointer;
-    margin-top: -.4em;
+    transform: scale(1.1);
+    margin-top: -.3em;
     background-color: rgb(0, 0, 230);
-    border: 3px solid rgb(0, 0, 230);
     color: #ffffff;
 }
 
@@ -223,16 +225,16 @@ footer {
     }
 
     .box-left button {
-        width: 120px;
+        width: 130px;
         height: 37px;
         font-size: 16px;
         font-weight: 500;
-        margin: -.8em .2em;
+        margin: -.78em .2em;
         padding: 0 1em;
     }
 
     .box-left button:hover {
-        margin: -.8em .2em;
+        margin: -.78em .2em;
         color: #ffffff;
     }
 
@@ -287,13 +289,12 @@ footer {
         width: 100px;
         height: 26px;
         font-size: 12px;
-        margin-top: -.35em;
+        margin-top: -.4em;
         padding: 0;
-        
     }
 
     .box-left button:hover {
-        margin-top: -.35em;
+        margin-top: -.4em;
         padding: 0;
         color: #ffffff;
     }
@@ -303,6 +304,7 @@ footer {
         height: 23px;
         margin: 0.4em 0.5em;
         text-indent: 10px;
+        
     }
 }
 
