--- a/style.css
+++ b/style.css
@@ -156,9 +156,9 @@ nav ul li {
     border-radius: 30px;
     border-style: none;
     outline: none; /* fjerner firkant rundt input når den er i focus */
-    color: black;
-    text-indent: 25px;
-    letter-spacing: .1px;
+    font-size: 16px;
+    text-indent: 20px;
+    letter-spacing: .5px;
     background-color: rgb(253, 231, 231);
 }
 /* for å skru av arrows i numberfield input */
