--- a/skattetrekk.css
+++ b/skattetrekk.css
@@ -4,22 +4,21 @@ html, body {
     width: 100%;
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(219, 218, 218);
+    background: #3c3176;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    position: absolute;
 }
 
-header {
+header, footer {
     width: 100%;
-    background-color: rgb(54, 49, 49); 
+    background-color: #3c3176; 
     color: rgb(211, 211, 211); 
     height: 3em;
-    border-radius: 0 0 0 20px;
     display: inline-flex;
     justify-content: space-between;
-    z-index:3;
 }
 
 header a, footer a {
@@ -31,7 +30,8 @@ header a, footer a {
 .menu-icon {
     cursor: pointer;
     float: right;
-    width: 20px;
+    width: 1em;
+    height: 1em;
     margin: 1em;
 }
 
@@ -40,34 +40,34 @@ header a, footer a {
 }
 
 nav {
-    position: relative;
     float: right;
-    z-index: 3;
-    background-color: rgb(87, 87, 87);
-    height: 20em;
+    background-color: #857DB1;
+    height: 100%;
     width: 12em;
     margin-top: 0;
+    position: relative;
+    z-index: 3;
 }
 
 nav ul {
-    width: 100%;
     margin-top: 3em;
     list-style-type: none;
-    background-color: rgb(105, 105, 105);
+    background-color: #5d5393;
 }
 
 nav ul li {
     padding: 1em 0;
-    margin: 0 -2em;
+    margin-left: -2.2em;
+    text-align: left;
 }
 
 .exit-btn {
     width: .8em;
     float: right;
     padding: 0.5em;
-    margin-top: .5em;
+    margin: .7em .5em 0 0;
     cursor: pointer;
-    background-color: rgb(87, 87, 87);
+    background-color: #857DB1;
 }
 
 .after-header {
@@ -76,37 +76,51 @@ nav ul li {
     align-items: flex-end;
     margin: 1.5em 0 0.75em;
 }
+.after-header p {
+    color: rgb(211, 211, 211);
+    font-size: 20px;
+    padding: .2em .4em;
+    text-transform: uppercase;
+    border-bottom: 2px solid #857DB1;
+    border-right: 2px solid #857DB1;
+    margin-bottom: 2em;
+}
+
 
 .box-calc {
     height: 40em;
     width: 30em; 
-    background: linear-gradient(to top left,#f3ff47, rgb(255, 103, 77), rgb(235, 92, 67),rgb(230, 101, 78), #ec643b); 
-    color: rgb(253, 231, 231);
-    border-radius: 10px;
+    background: #857DB1;
+    font-weight: 500;
+    border-radius: 1px;
     transition: all .3s ease-in-out;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 0;
-    border: 3px solid rgb(240, 230, 230);
+    margin-bottom: 2em;
+    
+   
 }
 .box-calc:hover {
     transform: scale(1.028);
 }
 
 .mortgage-form {
-    height: 95%;
-    width: 85%;
-    margin-top: -1em;
+    height: 99.5%;
+    width: 99.5%;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
     z-index: 1;
+    color: black;
+    font-weight: 300;
 }
 
 .box-left li, .box-right li {
     list-style-type: none;
     margin-left: -2.35em;
+    margin-top: .5em;
     height: 3em;
     display: flex;
     align-items: center;
@@ -129,36 +143,37 @@ nav ul li {
 }
     
 .box-left li button {
-    width: 160px;
-    height: 44px;
+    width: 200px;
+    height: 50px;
     padding: 0 1.5em;
-    border-radius: 20px;
+    border-radius: 10px;
     font-size: 20px;
-    color: rgb(228, 227, 227);
-    background-color: rgb(47, 47, 243);
-    border: 1px solid rgb(47, 47, 243);
+    color: rgb(211, 211, 211);
+    background-color: #221858;
+    border: 1px solid #221858;
     transition: all .1s ease-in-out;
     outline: none;
-    margin-left: 1em;
+    margin-top: .2em;
 }
 
 .box-left li button:hover {
     cursor: pointer;
     transform: scale(1.1);
-    background-color: rgb(0, 0, 230);
+    background-color: #3c3176;
     color: #ffffff;
 }
 
 .box-right li input {
     width: 180px;
     height: 2.9em;
-    border-radius: 30px;
+    border-radius: 5px;
     border-style: none;
     outline: none; /* fjerner firkant rundt input når den er i focus */
     font-size: 16px;
     text-indent: 16px;
     letter-spacing: .5px;
-    background-color: rgb(253, 231, 231);
+    background-color: #d4cdf8;
+    color: rgb(43, 43, 43);
 }
 /* for å skru av arrows i numberfield input */
 input[type=number]::-webkit-inner-spin-button, 
@@ -172,23 +187,10 @@ input[type=number] {
 }
 
 .box-right input:hover {
-    background-color: rgb(238, 220, 220);
-}
-.box-right input:last-child:hover {
-    background-color: rgb(253, 231, 231);
+    background-color: #c3bde2;
 }
 
-footer {
-    width: 100%;
-    height: 4em;
-    margin: 2em 0 0 0;
-    background-color: rgb(54, 49, 49); 
-    color: rgb(211, 211, 211); 
-    border-radius: 0 20px 0 0;
-    display: flex;
-    position: relative;
-    justify-content: space-between;
-}
+
 
 @media ( max-width: 1024px){
 
@@ -206,7 +208,6 @@ footer {
     }
 
     nav{
-        height: 20em;
         width: 11.66em;
         margin-top: 0;
     }
@@ -245,7 +246,6 @@ footer {
     }
 
     nav {
-        height: 20em;
         width: 12.1em;
         margin-top: 0;
     }
