--- a/skattetrekk.css
+++ b/skattetrekk.css
@@ -107,8 +107,8 @@ nav ul li {
 }
 
 .mortgage-form {
-    height: 99.5%;
-    width: 99.5%;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -132,7 +132,7 @@ nav ul li {
 }
 
 .box-right li {
-    justify-content: center;
+    justify-content: flex-end;
 }
 
 .box-left {
@@ -153,7 +153,6 @@ nav ul li {
     border: 1px solid #221858;
     transition: all .1s ease-in-out;
     outline: none;
-    margin-top: .2em;
 }
 
 .box-left li button:hover {
@@ -164,7 +163,7 @@ nav ul li {
 }
 
 .box-right li input {
-    width: 180px;
+    width: 200px;
     height: 2.9em;
     border-radius: 5px;
     border-style: none;
@@ -235,9 +234,8 @@ input[type=number] {
     body {
         font-size: 16px;
     }
-
-    header h3 {
-        font-size: 18px;
+    .after-header p {
+        font-size: 16px;
     }
 
     .menu-icon{
@@ -251,7 +249,7 @@ input[type=number] {
     }
 
     .box-calc {
-        height: 40em;
+        height: 42em;
         width: 24em; 
     }
     
@@ -260,16 +258,31 @@ input[type=number] {
         height: 95%;
     }
 
+    .box-left li {
+        width: 135%;
+    }
+
+    .box-right li {
+        width: 120%;
+    }
+
     .box-left li button {
-        width: 95%;
         height: 80%;
+        width: 95%;
         font-size: 16px;
     }
 
     .box-right li input {
-        width: 85%;
+        width: 90%;
         height: 75%;
         text-indent: 12px;
+        font-size: 16px;
+    }
+
+    .box-right li input:last-child {
+        width: 90%;
+        height: 75%;
+        text-indent: 5px;
         font-size: 16px;
     }
 }
