--- a/utleie.css
+++ b/utleie.css
@@ -195,14 +195,8 @@ main .box-calc:last-child li:first-child {
 }
 
 main .box-calc:last-child input:first-child {
-    background: #3f3480;
     color: rgb(238, 236, 255);
     border-bottom: 1px solid rgb(238, 236, 255);
-}
-
-main .box-calc:last-child input:first-child:hover {
-    cursor: pointer;
-    border: 1px solid #3f3480;
 }
 
 main .box-calc:last-child p {
@@ -310,10 +304,13 @@ main > .box-calc:last-child input {
     main .box-calc  .box2 li:first-child   {
         width: 112%;
         margin-left: -2.5em;
-        
+        background: #3f3480; 
     }
-
-   
+    
+    main .box-calc  .box2 li:first-child:hover   {
+       cursor: pointer;
+    border: 1px solid #3f3480; 
+    }
 
 }
 
