--- a/utleie.css
+++ b/utleie.css
@@ -309,7 +309,11 @@ main > .box-calc:last-child input {
     
     main .box-calc  .box2 li:first-child:hover   {
        cursor: pointer;
-    border: 1px solid #3f3480; 
+       border: 1px solid #3f3480; 
+    }
+    
+    main .box-calc  .box2 input:first-child   {
+        background: #3f3480; 
     }
 
 }
