--- a/utleie.css
+++ b/utleie.css
@@ -304,15 +304,14 @@ main > .box-calc:last-child input {
     main .box-calc  .box2 li:first-child   {
         width: 112%;
         margin-left: -2.5em;
-        background: #3f3480; 
-    }
-    
-    main .box-calc  .box2 li:first-child:hover   {
-       cursor: pointer;
-       border: 1px solid #3f3480; 
     }
     
     main .box-calc  .box2 input:first-child   {
+        background: #3f3480; 
+    }
+    
+    main .box-calc  .box2 input:first-child   {
+        cursor: pointer;
         background: #3f3480; 
     }
 
