--- a/utleie.css
+++ b/utleie.css
@@ -91,7 +91,7 @@ main{
 }
 
 .box-calc {
-    height: 44em;
+    height: 50em;
     width: 30em; 
     background: #857DB1;
     font-weight: 900;
@@ -105,6 +105,10 @@ main{
     border-left: .5px solid rgb(238, 236, 255);
    
 }
+.box-calc2 {
+    background: #3c3176;
+    border: .5px solid rgb(238, 236, 255);
+}
 
 .mortgage-form {
     height: 100%;
@@ -113,17 +117,34 @@ main{
     justify-content: space-evenly;
     align-items: center;
     z-index: 1;
-    color: black;
     font-weight: 300;
 }
 
 .label {
-    margin: 1em auto 0 -3em;
+    margin: 1em auto .5em -2.5em;
+    font-size: 22px;
+    font-weight: 900;
+    color: #3c3176;
+}
+
+.tooltip {
+    margin: 0 auto -.8em -4.8em;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: 500;
+    color: rgb(238, 236, 255);
 }
 
 .unit {
     margin-left: .5em;
     width: 100px;
+    font-size: 16px;
+    font-weight: 500;
+    color: rgb(238, 236, 255);
+}
+
+.box2 p{
+    font-size: 20px;
 }
 
 .box li {
@@ -152,20 +173,20 @@ main{
     text-emphasis: none;
     letter-spacing: .5px;
     background-color: #d4cdf8;
-    color: rgb(43, 43, 43);
+    color: #3c3176;
 }
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+/* ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ 
     color: #9a90ca;
-    opacity: 1; /* Firefox */
+    opacity: 1; /* Firefox
   }
   
-  :-ms-input-placeholder { /* Internet Explorer 10-11 */
+  :-ms-input-placeholder { /* Internet Explorer 10-11 
     color: #9a90ca;
   }
   
-  ::-ms-input-placeholder { /* Microsoft Edge */
+  ::-ms-input-placeholder { /* Microsoft Edge 
     color: #9a90ca;
-  }
+  } */
 
 /* for å skru av arrows i numberfield input */
 input[type=number]::-webkit-inner-spin-button, 
@@ -182,10 +203,6 @@ input[type=number] {
     background-color: #ccc3fa;
 }
 
-main .box-calc:last-child input {
-    background: #857db1;
-}
-
 main .box-calc:last-child li {
     margin-left: -1.5em;
 }
@@ -195,12 +212,11 @@ main .box-calc:last-child li:first-child {
 }
 
 main .box-calc:last-child input:first-child {
-    color: rgb(238, 236, 255);
     border-bottom: 1px solid rgb(238, 236, 255);
 }
 
 main .box-calc:last-child p {
-    background: #857db1;
+    background: #3c3176;
     color: rgb(238, 236, 255);
     width: 110%;
 }
@@ -212,7 +228,8 @@ main > .box-calc:last-child li:nth-child(9), .box-calc:last-child li:nth-child(1
 }
 
 main > .box-calc:last-child input {
-    color: rgb(55, 50, 105);
+    background: #3c3176;
+    color: rgb(238, 236, 255);
     text-align: center;
 }
 
@@ -242,7 +259,6 @@ main > .box-calc:last-child input {
     .box-calc {
         height: 44em;
         width: 26em; 
-        margin-bottom: 4em;
     }
 
     .box li input {
@@ -277,19 +293,18 @@ main > .box-calc:last-child input {
     }
 
     .box-calc {
-        height: 44em;
+        height: 52em;
         width: 24em; 
-        border-left: none;
     }
-    
     .box-calc1 {
-        margin-bottom: 4em;
+        margin: 1em 0;
     }
 
     .box-calc2 {
         margin-bottom: 3em;
+        
     }
-    
+
     .box-calc:hover {
         transform: scale(1.028);
     }
@@ -304,7 +319,8 @@ main > .box-calc:last-child input {
     }
 
     main .box-calc  .box1 input  {
-        font-size: 16px;
+        font-size: 14px;
+        height: 60%;
         text-indent: 5px;
     }
     main .box-calc  .box1 p  {
@@ -315,15 +331,41 @@ main > .box-calc:last-child input {
         width: 112%;
         margin-left: -2.5em;
     }
-    
-    main .box-calc  .box2 input:first-child   {
-        background: #3f3480; 
+
+    .label {
+        margin: 1.2em auto .3em -2.8em;
+        font-size: 17px;
+        font-weight: 600;
     }
     
-    main .box-calc  .box2 input:first-child   {
-        cursor: pointer;
-        background: #3f3480; 
+    .tooltip {
+        margin: 0 auto -.5em -4.5em;
+        font-weight: 500;
+        font-size: 11px;
     }
+    
+    .unit {
+        margin-left: .5em;
+        width: 100px;
+        font-size: 13px;
+        font-weight: 500;
+    }
+    
+    .box2 p{
+        font-size: 14px;
+        font-weight: 400;
+    }
+
+    main .box2 input {
+        font-size: 14px;
+    }
+
+    main .box2 input:first-child {
+        font-size: 18px;
+    }
+    
+
+   
 
 }
 
