--- a/utleie.css
+++ b/utleie.css
@@ -9,16 +9,16 @@ html, body {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    position: absolute;
 }
 
 header {
     width: 100%;
     background-color: #3c3176; 
     color: rgb(211, 211, 211); 
-    height: 3em;
+    height: 4em;
     display: inline-flex;
     justify-content: space-between;
+    /*position: fixed;*/
 }
 
 header a, footer a {
@@ -49,7 +49,7 @@ nav {
 }
 
 nav ul {
-    margin-top: 3em;
+    margin-top: 4em;
     list-style-type: none;
     background-color: #5d5393;
 }
