--- a/skattetrekk.css
+++ b/skattetrekk.css
@@ -31,7 +31,6 @@ header a, footer a {
     cursor: pointer;
     float: right;
     width: 1em;
-    height: 1em;
     margin: 1em;
 }
 
@@ -40,7 +39,6 @@ header a, footer a {
 }
 
 nav {
-    float: right;
     background-color: #857DB1;
     height: 100%;
     width: 12em;
@@ -50,22 +48,28 @@ nav {
 }
 
 nav ul {
-    margin-top: 3em;
+    margin-top: 4em;
     list-style-type: none;
     background-color: #5d5393;
 }
 
 nav ul li {
     padding: 1em 0;
-    margin-left: -2.2em;
+    margin-left: -2.5em;
     text-align: left;
+}
+nav a {
+    text-decoration-line: none;
+}
+nav a:hover{
+    font-weight: 900;
 }
 
 .exit-btn {
     width: .8em;
     float: right;
     padding: 0.5em;
-    margin: .7em .5em 0 0;
+    margin: 1.2em .5em 0 0;
     cursor: pointer;
     background-color: #857DB1;
 }
