--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@ html, body {
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(240, 240, 240);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
 }
 
 header {
@@ -81,13 +77,14 @@ nav ul li {
 .after-header {
     height: 20em;
     display: flex;
-    align-items: flex-end;
+    flex-direction:column;
+    justify-content: flex-end;
 }
 
 .box-calc {
     height: 20em;
     width: 30em; 
-    margin: 1em 3em 3em;
+    margin: 1em auto;
     background: linear-gradient(to top left,#ff6347, rgb(255, 103, 77), rgb(250, 125, 102)); 
     color: rgb(253, 231, 231);
     border-radius: 10px;
@@ -182,6 +179,8 @@ input[type=number] {
 footer {
     width: 100%;
     height: 4em;
+    position:relative;
+    margin-bottom: 0;
     background-color: rgb(66, 63, 63); 
     color: rgb(211, 211, 211); 
     border-radius: 0 20px 0 0;
