centered text in .after-header

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ nav ul li {
     display: flex;
     flex-direction:column;
     justify-content: flex-end;
+    text-align: center;
 }
 
 .box-calc {
