--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    margin: 0em;
+    margin: 0;
     height: 100%;
     width: 100%;
     font-size: 20px;
@@ -181,7 +181,7 @@ footer {
     width: 100%;
     height: 4em;
     position:relative;
-    margin-bottom: 0;
+    margin: 0;
     background-color: rgb(66, 63, 63); 
     color: rgb(211, 211, 211); 
     border-radius: 0 20px 0 0;
