--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav ul li {
     display: flex;
     flex-direction:column;
     justify-content: flex-end;
-    text-align: center;
+    align-items: center;
 }
 
 .box-calc {
