--- a/style.css
+++ b/style.css
@@ -180,8 +180,8 @@ input[type=number] {
 footer {
     width: 100%;
     height: 4em;
-    position:relative;
-    margin: 0;
+    position:absolute;
+    bottom:0;
     background-color: rgb(66, 63, 63); 
     color: rgb(211, 211, 211); 
     border-radius: 0 20px 0 0;
