--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ nav ul li {
 
 .after-header {
     height: 5em;
+    margin-top: 4em;
     display: flex;
     flex-direction:column;
     justify-content: flex-end;
