--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
 
 header {
     width: 100%;
+    top: 0;
     background-color: rgb(66, 63, 63); 
     color: rgb(211, 211, 211); 
     height: 4em;
