--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html, body {
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(240, 240, 240);
+    postition: absolute;
+    border: 1px solid black;
 }
 
 header {
@@ -81,6 +83,7 @@ nav ul li {
     flex-direction:column;
     justify-content: flex-end;
     align-items: center;
+    border: 1px solid black;
 }
 
 .box-calc {
@@ -94,7 +97,7 @@ nav ul li {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 0;
+    border: 1px solid black;
 }
 .box-calc:hover {
     transform: scale(1.048);
