--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ html, body {
     font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(240, 240, 240);
-    postition: absolute;
-    border: 1px solid black;
+    position: absolute;
 }
 
 header {
@@ -51,7 +50,7 @@ nav {
     float: right;
     z-index: 3;
     background-color: rgb(87, 87, 87);
-    height: 28em;
+    height: 100%;
     width: 12em;
     margin-top: 0;
 }
@@ -68,6 +67,13 @@ nav ul li {
     margin: 0 -2em;
 }
 
+nav a{
+    text-decoration: none;
+}
+nav a:hover{
+    font-weight: 600;
+}
+
 .exit-btn {
     width: .8em;
     float: right;
@@ -79,11 +85,11 @@ nav ul li {
 
 .after-header {
     margin-top: 4em;
+    height: 20%;
     display: flex;
     flex-direction:column;
     justify-content: flex-end;
     align-items: center;
-    border: 1px solid black;
 }
 
 .box-calc {
@@ -97,10 +103,9 @@ nav ul li {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
 }
 .box-calc:hover {
-    transform: scale(1.048);
+    transform: scale(1.028);
 }
 
 .mortgage-form {
