--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ html, body {
     background-color: rgb(240, 240, 240);
     position: absolute;
 }
+.blurred {
+    position: absolute;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    background: #7c7c8160;
+    display: none;
+}
 
 header {
     width: 100%;
