--- a/utleie.css
+++ b/utleie.css
@@ -10,6 +10,14 @@ html, body {
     justify-content: flex-start;
     align-items: center;
 }
+.blurred {
+    position: absolute;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    background: #7c7c8160;
+    display: none;
+}
 
 header {
     width: 100%;
