fixed minor issues taxcalc and rental calc

--- a/skattetrekk.css
+++ b/skattetrekk.css
@@ -37,9 +37,9 @@ header a, footer a {
 
 .menu-icon {
     cursor: pointer;
-    float: right;
     width: 1em;
-    margin: 1em;
+    height: 1.6em;
+    margin: .6em .9em;
 }
 
 .nav {
@@ -47,7 +47,7 @@ header a, footer a {
 }
 
 nav {
-    background-color: #857DB1;
+    background-color: #2d245f;
     height: 100%;
     width: 12em;
     margin-top: 0;
@@ -59,7 +59,7 @@ nav ul {
     margin-top: 3em;
     padding: 0;
     list-style-type: none;
-    background-color: #5d5393;
+    background-color: #2d245f;
 }
 
 nav li {
@@ -77,9 +77,8 @@ nav a:hover{
     width: .8em;
     float: right;
     padding: 0.5em;
-    margin: 0.8em .5em 0 0;
+    margin: .6em .5em 0 0;
     cursor: pointer;
-    background-color: #857DB1;
 }
 
 .after-header {
