--- a/utleie.css
+++ b/utleie.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     height: 100%;
     width: 100%;
@@ -10,6 +11,7 @@ html, body {
     justify-content: flex-start;
     align-items: center;
 }
+
 .blurred {
     position: absolute;
     z-index: 2;
@@ -21,14 +23,15 @@ html, body {
 
 header {
     width: 100%;
-    background-color: #3c3176; 
-    color: rgb(211, 211, 211); 
+    background-color: #3c3176;
+    color: rgb(211, 211, 211);
     height: 3em;
     display: inline-flex;
     justify-content: space-between;
 }
 
-header a, footer a {
+header a,
+footer a {
     margin: 1em;
     color: rgb(211, 211, 211);
     align-self: center;
@@ -64,10 +67,12 @@ nav li {
     padding: 1em 0;
     text-align: left;
 }
+
 nav a {
     text-decoration-line: none;
 }
-nav a:hover{
+
+nav a:hover {
     font-weight: 900;
 }
 
@@ -86,6 +91,7 @@ nav a:hover{
     align-items: flex-end;
     margin: 1.5em 0 0.75em;
 }
+
 .after-header p {
     color: rgb(211, 211, 211);
     font-size: 42px;
@@ -94,13 +100,13 @@ nav a:hover{
     margin-bottom: 2em;
 }
 
-main{
+main {
     display: flex;
 }
 
 .box-calc {
     height: 50em;
-    width: 30em; 
+    width: 30em;
     background: #857DB1;
     font-weight: 900;
     border-radius: 1px;
@@ -120,12 +126,12 @@ main{
 }
 
 .button-on {
-    background: rgb(53,42,107);
+    background: rgb(53, 42, 107);
     color: rgb(212, 205, 248);
 }
 
 .button-off {
-    background: rgb(133,125,177);
+    background: rgb(133, 125, 177);
     color: rgb(29, 21, 68);
 }
 
@@ -163,7 +169,7 @@ main{
     color: rgb(238, 236, 255);
 }
 
-.box2 p{
+.box2 p {
     font-size: 20px;
 }
 
@@ -178,7 +184,7 @@ main{
     z-index: 2;
 }
 
-.box li:last-child{
+.box li:last-child {
     margin-bottom: 1em;
 }
 
@@ -188,7 +194,8 @@ main{
     width: 100%;
     border-radius: 2px;
     border-style: none;
-    outline: none; /* fjerner firkant rundt input når den er i focus */
+    outline: none;
+    /* fjerner firkant rundt input når den er i focus */
     font-size: 18px;
     text-indent: 5px;
     text-emphasis: none;
@@ -197,6 +204,7 @@ main{
     color: #3c3176;
     margin-top: .2em;
 }
+
 /* ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ 
     color: #9a90ca; #352a6b
     opacity: 1; /* Firefox
@@ -211,14 +219,15 @@ main{
   } */
 
 /* for å skru av arrows i numberfield input */
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-    -webkit-appearance: none; 
-    margin: 0; 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
+
 /* for å skru av arrows i numberfield input i firefox */
 input[type=number] {
-    -moz-appearance:textfield;
+    -moz-appearance: textfield;
 }
 
 .box input:hover {
@@ -237,27 +246,34 @@ main .box-calc:last-child p {
     color: rgb(238, 236, 255);
     width: 110%;
 }
-main >.box-calc:last-child li:nth-child(2), .box-calc:last-child li:nth-child(10), .box-calc:last-child li:nth-child(15) {
+
+main>.box-calc:last-child li:nth-child(2),
+.box-calc:last-child li:nth-child(10),
+.box-calc:last-child li:nth-child(15) {
     border-bottom: 1px solid rgb(238, 236, 255);
     height: .5em;
     width: 102%;
     margin-left: -1.5em;
 }
 
-main > .box-calc:last-child input {
+main>.box-calc:last-child input {
     color: rgb(238, 236, 255);
     text-align: center;
 }
-.box-calc2, .box-calc2 .box2 li input, .box-calc2 .box2 li p{
+
+.box-calc2,
+.box-calc2 .box2 li input,
+.box-calc2 .box2 li p {
     background: #352a6b;
 }
 
-@media ( max-width: 1640px){
+@media (max-width: 1640px) {
     .box-calc {
         height: 40em;
-        width: 22em; 
+        width: 22em;
     }
-    .box2 p{
+
+    .box2 p {
         font-size: 15px;
         font-weight: 400;
     }
@@ -265,51 +281,57 @@ main > .box-calc:last-child input {
     main .box2 input {
         font-size: 15px;
         margin: 1em 1em 0 auto;
-        
+
     }
-    main > .box-calc:last-child input {
+
+    main>.box-calc:last-child input {
         text-align: end;
     }
 
     main .box1 input {
         font-size: 15px;
     }
+
     main .box1 li {
         height: 2.8em;
     }
+
     .label {
         margin: 1em auto .4em -3.4em;
         font-size: 16px;
         font-weight: 600;
     }
-    
+
     .tooltip {
         margin: -.4em auto -1.2em -5em;
         font-weight: 500;
         font-size: 11px;
     }
-    
+
     .unit {
         margin-left: .5em;
         width: 100px;
         font-size: 12px;
         font-weight: 500;
     }
+
     main .box2 li:first-child {
-        margin: 0em  auto -.5em -2.8em;
+        margin: 0em auto -.5em -2.8em;
     }
+
     main .box2 li {
         height: 2.1em;
         margin: .5em auto 0 auto;
     }
 }
 
-@media ( max-width: 1024px){
+@media (max-width: 1024px) {
 
     body {
         font-size: 18px;
     }
-    main{
+
+    main {
         display: block;
     }
 
@@ -317,19 +339,19 @@ main > .box-calc:last-child input {
         font-size: 20px;
     }
 
-    .menu-icon{
+    .menu-icon {
         width: 16px;
         padding-left: 1em;
     }
 
-    nav{
+    nav {
         width: 11.66em;
         margin-top: 0;
     }
 
     .box-calc {
         height: 50em;
-        width: 26em; 
+        width: 26em;
     }
 
     .box li input {
@@ -344,13 +366,13 @@ main > .box-calc:last-child input {
         font-size: 17px;
         font-weight: 600;
     }
-    
+
     .tooltip {
         margin: 0 auto -.5em -4.5em;
         font-weight: 500;
         font-size: 11px;
     }
-    
+
     .unit {
         margin-left: .5em;
         width: 100px;
@@ -359,15 +381,17 @@ main > .box-calc:last-child input {
     }
 }
 
-@media (max-width:640px){
+@media (max-width: 640px) {
 
-    html, body {
+    html,
+    body {
         font-size: 16px;
         margin: 0;
         background: #352a6b;
     }
 
-    header, .after-header {
+    header,
+    .after-header {
         margin: 0;
         background: #352a6b;
     }
@@ -376,11 +400,11 @@ main > .box-calc:last-child input {
         font-size: 16px;
     }
 
-    main{
+    main {
         display: block;
     }
 
-    .menu-icon{
+    .menu-icon {
         width: 14px;
     }
 
@@ -390,70 +414,74 @@ main > .box-calc:last-child input {
     }
 
     .box-calc {
-        width: 96vw; 
+        width: fit-content;
     }
 
     .box-calc1 {
         height: 50em;
-        margin: 1em 0 0 ;
     }
 
-    .box-calc2 { 
+    .box-calc2 {
         height: 42em;
     }
-    
-     .mortgage-form {
-        width: 92%;
+
+    .mortgage-form {
         height: 100%;
+        width: fit-content;
+        padding: 3em;
     }
 
-    main .box-calc  .box1  {
+    .box1 {
         width: 100%;
-        margin-left: 1.5em;
+        margin-top: -5em;
     }
 
-    main .box-calc  .box1 input  {
+    .box1 input {
         font-size: 13px;
-        height: 60%;
         text-indent: 5px;
         color: #281e55;
+        margin-left: .5em;
     }
-    main .box-calc  .box1 p  {
-        text-indent: 6px;
+
+    .box1 p {
+        text-indent: 10px;
     }
 
     .label {
-        margin: 1em auto .2em -2.8em;
         font-size: 17px;
         font-weight: 600;
         color: #281e55;
     }
-    
+
     .tooltip {
-        margin: 0 auto -.5em -4.5em;
+        margin-bottom: -.4em;
         font-weight: 500;
         font-size: 11px;
     }
-    
+
     .unit {
         margin-left: .5em;
         width: 100px;
         font-size: 12px;
         font-weight: 500;
     }
-    
-    .box2 p{
-        font-size: 15px;
-        font-weight: 400;
-        
+    .box2 {
+        margin-top: -5em;
     }
 
-    main .box2 input {
+    .box2 p {
+        font-size: 15px;
+        font-weight: 400;
+
+    }
+
+    .box2 input {
         font-size: 15px;
         margin: 0 1em 0 auto;
-        
+
     }
-    main > .box-calc:last-child input {
+
+    .box-calc:last-child input {
         text-align: end;
     }
 
@@ -466,9 +494,9 @@ main > .box-calc:last-child input {
         font-size: 18px;
         text-align: center;
     }
-    
+
     main .box2 li:first-child {
-        margin: 2.5em  auto -.5em -1.6em;
+        margin: 2.5em auto -.5em -1.6em;
     }
 
     footer {
@@ -484,7 +512,6 @@ main > .box-calc:last-child input {
         text-decoration: none;
         font-weight: 700;
     }
-   
+
 
 }
-
