--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 html, body {
     margin: 0;
-    height: 100%;
-    width: 100%;
-    font-size: 20px;
+    padding: 0;
+    font-size: 18px;
+    max-height: 100svh;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(240, 240, 240);
+    overflow: hidden;
 }
 .blurred {
     position: absolute;
@@ -29,7 +30,7 @@ header {
 }
 
 header a, footer a {
-    margin: 1em;
+    margin: .5em;
     color: rgb(211, 211, 211);
     align-self: center;
 }
@@ -57,7 +58,6 @@ nav {
     float: right;
     z-index: 3;
     background-color: rgb(87, 87, 87);
-    height: 100%;
     width: 12em;
     margin-top: 0;
 }
@@ -65,13 +65,14 @@ nav {
 nav ul {
     width: 100%;
     margin-top: 4em;
+    margin-bottom: 0;
     list-style-type: none;
     background-color: rgb(105, 105, 105);
+    padding: 0;
 }
 
 nav ul li {
     padding: 1em 0;
-    margin: 0 -2em;
 }
 
 nav a{
@@ -100,9 +101,9 @@ nav a:hover{
 }
 
 .box-calc {
-    height: 20em;
-    width: 30em; 
-    margin: auto;
+    height: 15em;
+    width: 25em; 
+    margin: 2rem auto;
     background: linear-gradient(to top left,#ff6347, rgb(255, 103, 77), rgb(250, 125, 102)); 
     color: rgb(253, 231, 231);
     border-radius: 10px;
@@ -182,9 +183,9 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0; 
 }
 /* for å skru av arrows i numberfield input i firefox */
-input[type=number] {
+/* input[type=number] {
     -moz-appearance:textfield;
-}
+} */
 
 .box-right input:hover {
     background-color: rgb(238, 220, 220);
@@ -195,9 +196,11 @@ input[type=number] {
 
 footer {
     width: 100%;
+    margin: 0;
+    padding: 0;
     height: 4em;
-    position:absolute;
-    bottom:0;
+    position: absolute;
+    bottom: 0;
     background-color: rgb(66, 63, 63); 
     color: rgb(211, 211, 211); 
     border-radius: 0 20px 0 0;
@@ -226,8 +229,8 @@ footer {
     }
 
     .box-calc {
-        height: 18em;
-        width: 26em; 
+        height: 16em;
+        width: 24em; 
     }
 
     .box-left li button {
